update code in calcualteAge function

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
     <div class="container">
         <h1>Age Calculator</h1>
+        <label for="dob">Enter your date of birth:</label>
 
         <div class="box">
-            <input type="date" id="date">
-            <button onclick="ageCalculate()"> Calculate</button>
+            <input type="date" id="dob">
+            <button onclick="calculateAge()"> Calculate</button>
         </div>
 
-        <div class="result"></div>
+        <div id="result"></div>
 
     </div>
 
